Thu Jun 17 19:01:32 UTC 2010  Steve Huston  <shuston@riverace.com>

        * tests/Service_Config_Test.cpp: Added a new test case,
          testUnloadingACELoggingStrategy. It loads then unloads the
          ACE logging strategy. This causes ACE to run down itself,
          smashing singletons in the process. This test case goes with
          Bugzilla #3856.

Wed Jun 16 21:48:49 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/config/acedefaults.mpb:

          Added various assignments that are specific to -type cdt6.  Since
          this Eclipse CDT support is not yet available in MPC, these will
          be ignored for now.

        * include/makeinclude/platform_g++_common.GNU:
        * include/makeinclude/platform_gnuwin32_common.GNU:
        * include/makeinclude/platform_mingw32.GNU:
        * include/makeinclude/rules.local.GNU:
        * include/makeinclude/wrapper_macros.GNU:

          Changes to support building on Windows (MinGW) without a bash shell.
          Set SHELL=cmd in platform_macros.GNU to enable.

Wed Jun 16 09:09:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/ConnectionCache.cpp:
          Added some error logging.

Mon Jun 14 16:16:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/inet.mpc:
        * bin/MakeProjectCreator/config/inet.mpb:
          Avoid WinCE.

Mon Jun 14 14:16:35 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Adjusted the VMS compatibility work-around from
          Wed Jun  9 14:45:33 UTC 2010  Adam Mitz  <mitza@ociweb.com>
          so that it excludes more GNU make constructs that the version
          on VMS can't handle.

Mon Jun 14 10:06:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/index.shtml:
          Updated Xampler links, one for PS3, one for IBM Cell

Mon Jun 14 09:13:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
